fixed img error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <!-- <a href="https://www.google.com/">google</a> -->
 
+
+    hello world
+    
     <header>
       <table>
         <tr>
