fixed some errors

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
   <body>
     <!-- <a href="https://www.google.com/">google</a> -->
 
-
-    hello world
-    
     <header>
       <table>
         <tr>
           <td>
             <img
-              src="images/EE53EEA0-D879-445B-B34F-EBCAB5B302AE_1_105_c.jpeg"
+              src="EE53EEA0-D879-445B-B34F-EBCAB5B302AE_1_105_c.jpeg"
               alt="siddharth's photo'"
               widht="200"
               height="200"
@@ -29,7 +26,7 @@
             <p><i>Software Engineer</i></p>
             <p>
               I ❤️ Web Development and Problem Solving
-              <a href="https://leetcode.com/sidharthagrwl/"
+              <a href="https://leetcode.com/sidharthagrwl/" target="_blank"
                 >(leetcode profile)</a
               >
             </p>
